# web-labs

./: .gitignore
lab2/: package.json
lab2/src/: App.jsx
lab3/src/: App.jsx
lab4/src/: App.jsx
lab5/: package-lock.json
lab5/src/: App.jsx
lab6/src/: App.jsx
lab6/src/components/: ProgressBar.jsx  StudentRow.jsx
lab7/src/: App.jsx
lab7/src/components/: Controls.jsx  CounterCard.jsx
lab8/backend/: alembic.ini  main.py  pyproject.toml  sqlite3.db
lab8/backend/app/: main.py
lab8/backend/app/controllers/: __init__.py  auth_controller.py  user_controller.py
lab8/backend/app/core/: auth_bearer.py  config.py  db.py  dependencies.py  security.py
lab8/backend/app/models/: __init__.py  user.py
lab8/backend/app/repositories/: sqlalchemy.py  user_repository.py
lab8/backend/app/schemas/: __init__.py  tokens.py  user_add.py  user_login.py  user_response.py
lab8/backend/app/services/: user_service.py
lab8/backend/app/uow/: base.py  database.py
lab8/backend/app/utils/: enums.py
lab8/backend/migrations/versions/: 730b5c402197_.py
lab8/frontend/src/: App.jsx  api.jsx
lab8/frontend/src/components/: AuthContext.jsx  Dashboard.jsx  Login.jsx  Register.jsx
lab_1/: index.html  style.css
