[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
]
